--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <input name="email" type="email" placeholder="Enter Email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp">
                       </div>
                       <div class="col-md-12  mb-3">
-                        <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" placeholder="Enter Message" rows="8"></textarea>
+                        <textarea class="form-control rounded-0" maxlength="101" id="exampleFormControlTextarea1" placeholder="Enter Message" rows="8"></textarea>
                       </div>
                       <div class="col-md-12  mt-4">
                         <p class="form-counter fw-bold"><span id="char">100</span> Character Available</p>
